# core-video-rs

./: Cargo.toml  README.md
src/: cv_image_buffer.rs  cv_pixel_buffer.rs  cv_pixel_buffer_attributes.rs  cv_pixel_buffer_error.rs  cv_pixel_buffer_lock.rs  cv_pixel_buffer_planar_data.rs  lib.rs  types.rs
src/attachments/: aspect_ratio.rs  clean_aperture.rs  display_dimensions.rs  mod.rs
src/constants/: chroma_location.rs  chroma_subsampling.rs  color_primaries.rs  field_detail.rs  mod.rs  transfer_function.rs  ycbcr_matrix.rs
src/cv_pixel_buffer/: internal.rs  internal_base.rs  internal_create.rs  internal_lock.rs  internal_props.rs  lock.rs  mod.rs  planar_data.rs
tests/: cv_pixel_buffer_lock_test.rs  cv_pixel_buffer_test.rs
