[package]
name = "core-video-rs"
description = "Rust wrapper for apple's CoreVideo framework"
keywords = ["screencapture", "screencapturekit", "macos"]
categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]
authors = ["Per Johansson <mail@perjohansson.net>"]
repository = "https://github.com/svtlabs/core-video-rs"
homepage = "https://github.com/svtlabs"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"


[dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
core-utils-rs = { path = "../core-utils-rs" }
io-surface = { version = "0.16" }
thiserror = "1"
